--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -7,6 +7,7 @@ jobs:
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
+    timeout-minutes: 1
     env:
       TF_VAR_tenancy_ocid: ${{ secrets.OCI_TENANCY_OCID }}
       TF_VAR_user_ocid:    ${{ secrets.OCI_USER_OCID }}
