--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -17,6 +17,7 @@ jobs:
       TF_VAR_compartment_ocid: ${{ secrets.OCI_COMPARTMENT_OCID }}
       TF_VAR_instance_image_ocid: ${{ secrets.OCI_INSTANCE_IMAGE_OCID }}
       TF_VAR_subnet_ocid: ${{ secrets.OCI_SUBNET_OCID }}
+      TF_VAR_load_balancer_ocid: ${{ secrets.OCI_LOAD_BALANCER_OCID }}
 
     steps:
       - name: Checkout
