--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -36,3 +36,9 @@ jobs:
 
       # - name: Terraform Apply
       #   run: terraform apply -auto-approve tfplan
+
+      - name: Terraform Plan Destroy
+        run: terraform plan -destroy -out=tfplan
+
+      # - name: Terraform Destroy
+      #   run: terraform destroy -auto-approve
