--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -34,8 +34,8 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -out=tfplan
 
-      # - name: Terraform Apply
-      #   run: terraform apply -auto-approve tfplan
+      - name: Terraform Apply
+        run: terraform apply -auto-approve tfplan
 
       - name: Terraform Plan Destroy
         run: terraform plan -destroy -out=tfplan
