--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -7,7 +7,7 @@ jobs:
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 20
     env:
       TF_VAR_tenancy_ocid: ${{ secrets.OCI_TENANCY_OCID }}
       TF_VAR_user_ocid:    ${{ secrets.OCI_USER_OCID }}
@@ -34,11 +34,11 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -out=tfplan
 
-      # - name: Terraform Apply
-      #   run: terraform apply -auto-approve tfplan
+      - name: Terraform Apply
+        run: terraform apply -auto-approve tfplan
 
-      # - name: Terraform Plan Destroy
-      #   run: terraform plan -destroy -out=tfplan
+      - name: Terraform Plan Destroy
+        run: terraform plan -destroy -out=tfplan
 
-      # - name: Terraform Destroy
-      #   run: terraform destroy -auto-approve
+      - name: Terraform Destroy
+        run: terraform destroy -auto-approve
