--- a/.github/workflows/terraform-dev.yaml
+++ b/.github/workflows/terraform-dev.yaml
@@ -1,11 +1,11 @@
-name: "Terraform"
+name: "Terraform-Dev"
 on:
   push:
     branches:
       - main
 jobs:
-  terraform:
-    name: 'Terraform'
+  terraform-dev:
+    name: 'Terraform-Dev'
     runs-on: ubuntu-latest
     timeout-minutes: 20
     env:
@@ -14,10 +14,10 @@ jobs:
       TF_VAR_private_key:  ${{ secrets.OCI_PRIVATE_KEY }}
       TF_VAR_fingerprint:  ${{ secrets.OCI_FINGERPRINT }}
       TF_VAR_region:       ${{ secrets.OCI_REGION }}
+      TF_VAR_env:          ${{ secrets.DEVELOPMENT_ENV_NAME }}
       TF_VAR_testing_compartment_ocid: ${{ secrets.OCI_TESTING_COMPARTMENT_OCID }}
-      TF_VAR_instance_image_ocid: ${{ secrets.OCI_INSTANCE_IMAGE_OCID }}
       TF_VAR_subnet_ocid: ${{ secrets.OCI_SUBNET_OCID }}
-      TF_VAR_load_balancer_ocid: ${{ secrets.OCI_LOAD_BALANCER_OCID }}
+      TF_VAR_testing_load_balancer_ocid: ${{ secrets.OCI_TESTING_LOAD_BALANCER_OCID }}
       TF_VAR_management_compartment_ocid: ${{ secrets.OCI_MANAGEMENT_COMPARTMENT_OCID }}
       TF_VAR_ec_service_compartment_ocid: ${{ secrets.OCI_EC_SERVICE_COMPARTMENT_OCID }}
 
@@ -28,17 +28,27 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
 
-      # - name: Terraform Init
-      #   run: terraform init
+      - name: Terraform Init
+        run: |
+          cd ./env/dev
+          terraform init
 
-      # - name: Terraform Plan
-      #   run: terraform plan -out=tfplan
+      - name: Terraform Plan
+        run: |
+          cd ./env/dev
+          terraform plan -out=tfplan
 
       # - name: Terraform Apply
-      #   run: terraform apply -auto-approve tfplan
+      #   run: |
+      #     cd ./env/dev
+      #     terraform apply -auto-approve tfplan
 
       # - name: Terraform Plan Destroy
-      #   run: terraform plan -destroy -out=tfplan
+      #   run: |
+      #     cd ./env/dev
+      #     terraform plan -destroy -out=tfplan
 
       # - name: Terraform Destroy
-      #   run: terraform destroy -auto-approve
+      #   run: |
+      #     cd ./env/dev
+      #     terraform destroy -auto-approve
