--- a/.github/workflows/terraform-dev.yaml
+++ b/.github/workflows/terraform-dev.yaml
@@ -38,17 +38,12 @@ jobs:
           cd ./env/dev
           terraform plan -out=tfplan
 
-      # - name: Terraform Apply
-      #   run: |
-      #     cd ./env/dev
-      #     terraform apply -auto-approve tfplan
+      - name: Terraform Apply
+        run: |
+          cd ./env/dev
+          terraform apply -auto-approve tfplan
 
-      # - name: Terraform Plan Destroy
-      #   run: |
-      #     cd ./env/dev
-      #     terraform plan -destroy -out=tfplan
-
-      # - name: Terraform Destroy
-      #   run: |
-      #     cd ./env/dev
-      #     terraform destroy -auto-approve
+      - name: Terraform Destroy
+        run: |
+          cd ./env/dev
+          terraform destroy -auto-approve
