fix:workflows trigger

--- a/.github/workflows/terraform-dev.yaml
+++ b/.github/workflows/terraform-dev.yaml
@@ -1,8 +1,5 @@
 name: "Terraform-Dev"
-on:
-  push:
-    branches:
-      - main
+on: workflow_dispatch
 jobs:
   terraform-dev:
     name: 'Terraform-Dev'
