--- a/.github/workflows/terraform-dev.yaml
+++ b/.github/workflows/terraform-dev.yaml
@@ -12,11 +12,9 @@ jobs:
       TF_VAR_fingerprint:  ${{ secrets.OCI_FINGERPRINT }}
       TF_VAR_region:       ${{ secrets.OCI_REGION }}
       TF_VAR_env:          ${{ secrets.DEVELOPMENT_ENV_NAME }}
-      TF_VAR_testing_compartment_ocid: ${{ secrets.OCI_TESTING_COMPARTMENT_OCID }}
-      TF_VAR_subnet_ocid: ${{ secrets.OCI_SUBNET_OCID }}
-      TF_VAR_testing_load_balancer_ocid: ${{ secrets.OCI_TESTING_LOAD_BALANCER_OCID }}
-      TF_VAR_management_compartment_ocid: ${{ secrets.OCI_MANAGEMENT_COMPARTMENT_OCID }}
-      TF_VAR_ec_service_compartment_ocid: ${{ secrets.OCI_EC_SERVICE_COMPARTMENT_OCID }}
+      TF_VAR_compartment_ocid: ${{ secrets.OCI_DEVELOPMENT_COMPARTMENT_OCID }}
+      # TF_VAR_subnet_ocid: ${{ secrets.OCI_DEVELOPMENT_SUBNET_OCID }}
+      TF_VAR_load_balancer_ocid: ${{ secrets.OCI_DEVELOPMENT_LOAD_BALANCER_OCID }}
 
     steps:
       - name: Checkout
