--- a/.github/workflows/terraform-mgmt.yaml
+++ b/.github/workflows/terraform-mgmt.yaml
@@ -13,7 +13,7 @@ jobs:
       TF_VAR_region:       ${{ secrets.OCI_REGION }}
       TF_VAR_env:          ${{ secrets.MANAGEMENT_ENV_NAME }}
       TF_VAR_compartment_ocid: ${{ secrets.OCI_MANAGEMENT_COMPARTMENT_OCID }}
-      # TF_VAR_subnet_ocid: ${{ secrets.OCI_MANAGEMENT_SUBNET_OCID }}
+      TF_VAR_subnet_ocid: ${{ secrets.OCI_MANAGEMENT_SUBNET_OCID }}
       TF_VAR_load_balancer_ocid: ${{ secrets.OCI_MANAGEMENT_LOAD_BALANCER_OCID }}
 
     steps:
@@ -33,12 +33,12 @@ jobs:
           cd ./env/mgmt
           terraform plan -out=tfplan
 
-      - name: Terraform Apply
-        run: |
-          cd ./env/mgmt
-          terraform apply -auto-approve tfplan
+      # - name: Terraform Apply
+      #   run: |
+      #     cd ./env/mgmt
+      #     terraform apply -auto-approve tfplan
 
-      - name: Terraform Destroy
-        run: |
-          cd ./env/mgmt
-          terraform destroy -auto-approve
+      # - name: Terraform Destroy
+      #   run: |
+      #     cd ./env/mgmt
+      #     terraform destroy -auto-approve
