--- a/.github/workflows/terraform-dev.yaml
+++ b/.github/workflows/terraform-dev.yaml
@@ -4,7 +4,7 @@ jobs:
   terraform-dev:
     name: 'Terraform-Dev'
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    timeout-minutes: 30
     env:
       TF_VAR_tenancy_ocid: ${{ secrets.OCI_TENANCY_OCID }}
       TF_VAR_user_ocid:    ${{ secrets.OCI_USER_OCID }}
@@ -15,6 +15,11 @@ jobs:
       TF_VAR_compartment_ocid: ${{ secrets.OCI_DEVELOPMENT_COMPARTMENT_OCID }}
       TF_VAR_subnet_ocid: ${{ secrets.OCI_DEVELOPMENT_SUBNET_OCID }}
       TF_VAR_load_balancer_ocid: ${{ secrets.OCI_DEVELOPMENT_LOAD_BALANCER_OCID }}
+      TF_VAR_vcn_cidr_block: ${{ secrets.OCI_DEVELOPMENT_VCN_CIDR_BLOCK }}
+      TF_VAR_k8apiendpoint_private_subnet_cidr_block: ${{ secrets.OCI_DEVELOPMENT_K8APIENDPOINT_PRIVATE_SUBNET_CIDR_BLOCK }}
+      TF_VAR_workernodes_private_subnet_cidr_block: ${{ secrets.OCI_DEVELOPMENT_WORKERNODES_PRIVATE_SUBNET_CIDR_BLOCK }}
+      TF_VAR_serviceloadbalancers_public_subnet_cidr_block: ${{ secrets.OCI_DEVELOPMENT_SERVICELBALANCERS_PUBLIC_SUBNET_CIDR_BLOCK }}
+      TF_VAR_node_pools: ${{ secrets.OCI_DEVELOPMENT_NODE_POOLS }}
 
     steps:
       - name: Checkout
@@ -33,12 +38,12 @@ jobs:
           cd ./env/dev
           terraform plan -out=tfplan
 
-      - name: Terraform Apply
-        run: |
-          cd ./env/dev
-          terraform apply -auto-approve tfplan
+      # - name: Terraform Apply
+      #   run: |
+      #     cd ./env/dev
+      #     terraform apply -auto-approve tfplan
 
-      - name: Terraform Destroy
-        run: |
-          cd ./env/dev
-          terraform destroy -auto-approve
+      # - name: Terraform Destroy
+      #   run: |
+      #     cd ./env/dev
+      #     terraform destroy -auto-approve
