--- a/.github/workflows/terraform-dev.yaml
+++ b/.github/workflows/terraform-dev.yaml
@@ -4,7 +4,7 @@ jobs:
   terraform-dev:
     name: 'Terraform-Dev'
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    # timeout-minutes: 30
     env:
       TF_VAR_tenancy_ocid: ${{ secrets.OCI_TENANCY_OCID }}
       TF_VAR_user_ocid:    ${{ secrets.OCI_USER_OCID }}
