--- a/.github/workflows/terraform-mgmt.yaml
+++ b/.github/workflows/terraform-mgmt.yaml
@@ -4,7 +4,7 @@ jobs:
   terraform-mgmt:
     name: 'Terraform-Mgmt'
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    # timeout-minutes: 30
     env:
       TF_VAR_tenancy_ocid: ${{ secrets.OCI_TENANCY_OCID }}
       TF_VAR_user_ocid:    ${{ secrets.OCI_USER_OCID }}
@@ -15,6 +15,11 @@ jobs:
       TF_VAR_compartment_ocid: ${{ secrets.OCI_MANAGEMENT_COMPARTMENT_OCID }}
       TF_VAR_subnet_ocid: ${{ secrets.OCI_MANAGEMENT_SUBNET_OCID }}
       TF_VAR_load_balancer_ocid: ${{ secrets.OCI_MANAGEMENT_LOAD_BALANCER_OCID }}
+      TF_VAR_vcn_cidr_block: ${{ secrets.OCI_MANAGEMENT_VCN_CIDR_BLOCK }}
+      TF_VAR_k8s_api_endpoint_private_subnet_cidr_block: ${{ secrets.OCI_MANAGEMENT_K8S_API_ENDPOINT_PRIVATE_SUBNET_CIDR_BLOCK }}
+      TF_VAR_worker_nodes_private_subnet_cidr_block: ${{ secrets.OCI_MANAGEMENT_WORKER_NODES_PRIVATE_SUBNET_CIDR_BLOCK }}
+      TF_VAR_service_loadbalancers_public_subnet_cidr_block: ${{ secrets.OCI_MANAGEMENT_SERVICE_LOADBALANCERS_PUBLIC_SUBNET_CIDR_BLOCK }}
+      TF_VAR_node_pools: ${{ secrets.OCI_MANAGEMENT_NODE_POOLS }}
 
     steps:
       - name: Checkout
@@ -33,12 +38,12 @@ jobs:
           cd ./env/mgmt
           terraform plan -out=tfplan
 
-      - name: Terraform Apply
-        run: |
-          cd ./env/mgmt
-          terraform apply -auto-approve tfplan
+      # - name: Terraform Apply
+      #   run: |
+      #     cd ./env/mgmt
+      #     terraform apply -auto-approve tfplan
 
-      - name: Terraform Destroy
-        run: |
-          cd ./env/mgmt
-          terraform destroy -auto-approve
+      # - name: Terraform Destroy
+      #   run: |
+      #     cd ./env/mgmt
+      #     terraform destroy -auto-approve
