--- a/.github/workflows/terraform-mgmt.yaml
+++ b/.github/workflows/terraform-mgmt.yaml
@@ -20,6 +20,9 @@ jobs:
       TF_VAR_worker_nodes_private_subnet_cidr_block: ${{ secrets.OCI_MANAGEMENT_WORKER_NODES_PRIVATE_SUBNET_CIDR_BLOCK }}
       TF_VAR_service_loadbalancers_public_subnet_cidr_block: ${{ secrets.OCI_MANAGEMENT_SERVICE_LOADBALANCERS_PUBLIC_SUBNET_CIDR_BLOCK }}
       TF_VAR_node_pools: ${{ secrets.OCI_MANAGEMENT_NODE_POOLS }}
+      TF_VAR_vcn_id: ${{ secrets.OCI_MANAGEMENT_VCN_ID }}
+      TF_VAR_public_zone_name: ${{ secrets.OCI_MANAGEMENT_PUBLIC_ZONE_NAME }}
+      TF_VAR_a_records: ${{ secrets.OCI_MANAGEMENT_A_RECORDS }}
 
     steps:
       - name: Checkout
