--- a/.github/workflows/terraform-dev.yaml
+++ b/.github/workflows/terraform-dev.yaml
@@ -28,11 +28,30 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Terraform
+      - name: Terraform Setup
         uses: hashicorp/setup-terraform@v3
 
       - name: Terraform Format Check
         run: terraform fmt -check -recursive
+
+      - name: TFLint Setup
+        uses: terraform-linters/setup-tflint@v4
+        with:
+          tflint_version: latest
+
+      - name: TFLint Init
+        run: tflint --init
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+
+      - name: Run TFLint
+        run: |
+          tflint --chdir=env/dev --config=$(realpath .tflint.hcl) --format compact
+          tflint --chdir=module/dns --config=$(realpath .tflint.hcl) --format compact
+          tflint --chdir=module/oke --config=$(realpath .tflint.hcl) --format compact
+          tflint --chdir=module/waf --config=$(realpath .tflint.hcl) --format compact
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
 
       - name: Terraform Init
         run: |
