--- a/.github/workflows/terraform-dev.yaml
+++ b/.github/workflows/terraform-dev.yaml
@@ -46,6 +46,7 @@ jobs:
 
       - name: Run TFLint
         run: |
+          tflint --chdir=env/dev --config=$(realpath .tflint.hcl) --format compact
           tflint --chdir=module/dns --config=$(realpath .tflint.hcl) --format compact
           tflint --chdir=module/oke --config=$(realpath .tflint.hcl) --format compact
           tflint --chdir=module/waf --config=$(realpath .tflint.hcl) --format compact
