--- a/.github/workflows/terraform-dev.yaml
+++ b/.github/workflows/terraform-dev.yaml
@@ -45,7 +45,7 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
 
       - name: Run TFLint
-        run: tflint --recursive --format=compact
+        run: tflint --recursive --exclude=env/mgmt d--config=$(realpath .tflint.hcl) --format=compact
         env:
           GITHUB_TOKEN: ${{ github.token }}
 
