--- a/.github/workflows/terraform-check.yaml
+++ b/.github/workflows/terraform-check.yaml
@@ -4,8 +4,9 @@ on:
     workflow_dispatch:
     push:
         branches:
-            - "feature/**"
+            - "feature/**" # ローカルのfeatureブランチからpushされた場合
 
+# コミット作成のための権限
 permissions:
     contents: write
 
@@ -39,9 +40,28 @@ jobs:
                   GITHUB_TOKEN: ${{ github.token }}
 
             - name: Run TFLint
-              run: tflint --config=$(realpath .tflint.hcl) --format compact
-              env:
-                  GITHUB_TOKEN: ${{ github.token }}
+              run: tflint --recursive --config=$(realpath .tflint.hcl) --format compact
+
+            # - name: Run TFLint
+            #   run: |
+            #       # 失敗を記録するための変数を用意 (0は成功)
+            #       EXIT_CODE=0
+
+            #       # 各ディレクトリでtflintを実行し、失敗したらEXIT_CODEを1に設定する
+            #       # "|| EXIT_CODE=1" を各コマンドの末尾に追加
+            #       tflint --chdir=env/dev --config=$(realpath .tflint.hcl) --format compact || EXIT_CODE=1
+            #       tflint --chdir=env/mgmt --config=$(realpath .tflint.hcl) --format compact || EXIT_CODE=1
+            #       tflint --chdir=module/dns --config=$(realpath .tflint.hcl) --format compact || EXIT_CODE=1
+            #       tflint --chdir=module/oke --config=$(realpath .tflint.hcl) --format compact || EXIT_CODE=1
+            #       tflint --chdir=module/waf --config=$(realpath .tflint.hcl) --format compact || EXIT_CODE=1
+
+            #       # EXIT_CODEが1（失敗）の場合、ステップをエラーで終了させる
+            #       if [ $EXIT_CODE -ne 0 ]; then
+            #         echo "TFLint found issues."
+            #         exit 1
+            #       fi
+            #   env:
+            #       GITHUB_TOKEN: ${{ github.token }}
 
             - name: Terraform Format Check
               run: terraform fmt -diff -recursive
