--- a/.github/workflows/terraform-mgmt-plan.yaml
+++ b/.github/workflows/terraform-mgmt-plan.yaml
@@ -5,12 +5,14 @@ on:
     pull_request:
         branches:
             - "main"
+        paths: # 以下のパスに変更がある場合のみ実行
+            - "env/mgmt/**"
+            - "module/**"
 
 jobs:
     terraform-mgmt-plan:
         name: "Terraform-Mgmt-Plan"
         runs-on: ubuntu-latest
-        # timeout-minutes: 30
         env:
             TF_VAR_tenancy_ocid: ${{ secrets.OCI_TENANCY_OCID }}
             TF_VAR_user_ocid: ${{ secrets.OCI_USER_OCID }}
@@ -31,30 +33,24 @@ jobs:
             TF_VAR_a_records: ${{ secrets.OCI_MANAGEMENT_A_RECORDS }}
 
         steps:
+            # リポジトリのチェックアウト
             - name: Checkout
               uses: actions/checkout@v4
               with:
                   fetch-depth: 0
 
+            # Terraformのセットアップ
             - name: Terraform Setup
               uses: hashicorp/setup-terraform@v3
 
+            # Terraformの初期化
             - name: Terraform Init
               run: |
                   cd ./env/mgmt
                   terraform init
 
+            # Terraform Planコマンドによるリソース作成の実行計画作成
             - name: Terraform Plan
               run: |
                   cd ./env/mgmt
                   terraform plan -out=tfplan
-
-            # - name: Terraform Apply
-            #   run: |
-            #     cd ./env/mgmt
-            #     terraform apply -auto-approve tfplan
-
-            # - name: Terraform Destroy
-            #   run: |
-            #     cd ./env/mgmt
-            #     terraform destroy -auto-approve
